--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -673,9 +673,22 @@ to {
 }
 .post-detail-content{
     margin-top: 35px;
+    width: 100%;
+    word-break: break-all;
+}
+.post-detail-image{
+    width: 100%;
+    margin-top: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+}
+.post-detail-image > img{
+    cursor: pointer;
 }
 .post-detail-interactAmount{
-    margin-top: 35px;
+    margin-top: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -818,7 +831,7 @@ animation: swing2 var(--uib-speed) linear infinite;
     animation-timing-function: ease-in;
 }
 }
-.AddPostModal{
+#AddPostModal{
     width: 600px;
     height: 430px;
     position: relative;
@@ -827,6 +840,15 @@ animation: swing2 var(--uib-speed) linear infinite;
     top: 158px;
     transform: translateX(-50%);
     border-radius: 10px;
+}
+.LoadingAddPost{
+    position: absolute;
+    z-index: 20;
+    height: 100%;
+    width: 100%;
+    background: rgb(225 220 220 / 60%);
+    top: 0;
+    left: 0;
 }
 .create-post{
     width: 100%;
@@ -863,36 +885,131 @@ animation: swing2 var(--uib-speed) linear infinite;
     font-size: 16px;
     padding-left: 10px;
 }
-.AddPostModal-form{
+#AddPostModal-form{
     width: 94%;
+    /* height: 360px; */
     margin: 0 auto;
     position: relative;
     margin-top: -10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    /* overflow-y: auto; */
 }
-.input-title{
+#AddPostModal-form::-webkit-scrollbar {
+    width: 5px;
+}
+#AddPostModal-form::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to bottom, #ddd, #ddd);
+    border-radius: 100rem;
+}
+#input-title{
     width: 100%;
     font-size: 25px;
-    height: 135px;
+    /* height: 90px; */
+    height: 150px;
     border: none;
     outline: none;
     word-break: break-all;
 }
-.AddPostModal-form::before{
+#input-file{
+    width: 100%;
+    margin-top: 15px;
+    height: 220px;
+    border-radius: 10px;
+    border: ridge 1px #D4D4D4;
+    display: none;
+    position: relative;
+    padding: 10px;
+}
+#ChooseFile{
+    display: block;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 97%;
+    height: 185px;
+    margin-top: -185px;
+    margin-left: 8px;
+    background: #ddd;
+    opacity: 0;
+}
+.OpenChooseFile1{
+    background: #ddd;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 97%;
+    height: 185px;
+    margin-top: 8px;
+    margin-left: 8px;
+    text-align: center;
+}
+.OpenChooseFile1-title{
+    width: 100%;
+    text-align: center;
+    padding-top: 55px;
+}
+.OpenChooseFile2{
+    background: #ddd;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 5;
+    cursor: pointer;
+    width: 170px;
+    height: 35px;
+    top: 20px;
+    left: 20px;
+    text-align: center;
+    line-height: 35px;
+}
+#CloseChooseFile2{
+    background: #ddd;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 5;
+    cursor: pointer;
+    top: 20px;
+    right: 15px;
+    width: 30px;
+    text-align: center;
+    color: #fff;
+    height: 30px;
+    line-height: 30px;
+}
+#CloseChooseFile1:hover{
+    background: #bbb;
+}
+#CloseChooseFile1{
+    background: #fff;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 5;
+    cursor: pointer;
+    top: 25px;
+    right: 25px;
+    width: 30px;
+    text-align: center;
+    color: #ddd;
+    height: 30px;
+    line-height: 30px;
+}
+#CloseChooseFile2:hover{
+    background: #bbb;
+}
+/* #AddPostModal-form::before{
     content: "";
     position: absolute;
-    bottom: 0;
+    top: 200px;
     right: 0;
     background: white;
     width: 15px;
     height: 15px;
-}
-.input-title::placeholder{
+} */
+#input-title::placeholder{
     color: #666;
 }
-.input-title::-webkit-scrollbar {
+#input-title::-webkit-scrollbar {
     width: 5px;
 }
-.input-title::-webkit-scrollbar-thumb {
+#input-title::-webkit-scrollbar-thumb {
     background-image: linear-gradient(to bottom, #923192, #E78722);
     border-radius: 100rem;
 }
@@ -902,7 +1019,7 @@ animation: swing2 var(--uib-speed) linear infinite;
     height: 57px;
     border-radius: 10px;
     border: 2px solid #EAEAEA;
-    margin-top: 25px;
+    margin-top: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -911,19 +1028,35 @@ animation: swing2 var(--uib-speed) linear infinite;
 .ChooseOption{
     display: flex;
 }
-.ChooseOption > li {
+#selectFile, #selectIcon, #selectGif{
     width: 45px;
     height: 45px;
     border-radius: 50%;
     cursor: pointer;
     margin-left: 8px;
     text-align: center;
+    background: #fff;
 }
-.ChooseOption > li > img {
+#selectFile.disabled{
+    background: #ddd;
+}
+#selectFile:hover{
+    background: #ddd;
+}
+#selectFile > img {
     margin-top: 6px;
 }
-.ChooseOption > li:hover{
+#selectIcon:hover{
     background-color: #ddd;
+}
+#selectIcon > img {
+    margin-top: 6px;
+}
+#selectGif:hover{
+    background-color: #ddd;
+}
+#selectGif > img {
+    margin-top: 6px;
 }
 .back{
     width: 32px;
@@ -983,7 +1116,80 @@ animation: swing2 var(--uib-speed) linear infinite;
     cursor: not-allowed;
     line-height: 35px;
 }
-
+.loader {
+    position: relative;
+    width: 2.5em;
+    height: 2.5em;
+    transform: rotate(165deg);
+   }
+   
+   .loader:before, .loader:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 0.25em;
+    transform: translate(-50%, -50%);
+   }
+   
+   .loader:before {
+    animation: before8 2s infinite;
+   }
+   
+   .loader:after {
+    animation: after6 2s infinite;
+   }
+   
+   @keyframes before8 {
+    0% {
+     width: 0.5em;
+     box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
+    }
+   
+    35% {
+     width: 2.5em;
+     box-shadow: 0 -0.5em rgba(225, 20, 98, 0.75), 0 0.5em rgba(111, 202, 220, 0.75);
+    }
+   
+    70% {
+     width: 0.5em;
+     box-shadow: -1em -0.5em rgba(225, 20, 98, 0.75), 1em 0.5em rgba(111, 202, 220, 0.75);
+    }
+   
+    100% {
+     box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
+    }
+   }
+   
+   @keyframes after6 {
+    0% {
+     height: 0.5em;
+     box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
+    }
+   
+    35% {
+     height: 2.5em;
+     box-shadow: 0.5em 0 rgba(61, 184, 143, 0.75), -0.5em 0 rgba(233, 169, 32, 0.75);
+    }
+   
+    70% {
+     height: 0.5em;
+     box-shadow: 0.5em -1em rgba(61, 184, 143, 0.75), -0.5em 1em rgba(233, 169, 32, 0.75);
+    }
+   
+    100% {
+     box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
+    }
+   }
+   
+   .loader {
+    position: absolute;
+    top: calc(50% - 1.25em);
+    left: calc(50% - 1.25em);
+   }
 
 @media screen and (min-width: 767px) and (max-width: 1023px) {
     .item-topic{
@@ -1115,7 +1321,7 @@ animation: swing2 var(--uib-speed) linear infinite;
     display: block;
     margin-bottom: 70px;
 }
-.AddPostModal{
+#AddPostModal{
     width: 100%;
 }
 }
