--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,11 +21,26 @@ body {
 
 input,
 button,
-select,
-textarea {
+select{
   outline: none;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
+}
+
+textarea{
+  outline: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  resize: none;
+}
+
+textarea::-webkit-scrollbar{
+  width: 5px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to bottom, #ddd, #ddd);
+  border-radius: 100rem;
 }
 
 input {
