--- a/client/src/views/Auth.css
+++ b/client/src/views/Auth.css
@@ -17,20 +17,17 @@
     position: fixed;
     top: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    line-height: 100px;
     background: linear-gradient(rgba(39,39,39, 0.6), transparent);
     z-index: 100;
 }
 .nav-logo{
     display: flex;
     align-items: center;
-}
-.nav-logo p{
-    color: white;
-    font-size: 25px;
-    font-weight: 600;
+    margin-left: 30px;
+    margin-top: 20px;
 }
 .nav-menu ul{
     display: flex;
@@ -46,12 +43,16 @@
     margin: 0 25px;
 }
 .link:hover, .active{
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #000;
+}
+.nav-button{
+    margin-right: 60px;
+    margin-top: 20px;
 }
 .nav-button .btn{
     width: 130px;
     height: 40px;
-    font-weight: 500;
+    font-weight: bold;
     background: rgba(255, 255, 255, 0.4);
     border: none;
     border-radius: 30px;
@@ -76,31 +77,49 @@
 .form-box{
     position: relative;
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: 512px;
-    height: 420px;
-    overflow: hidden;
+    width: 680px;
+    height: 480px;
+    margin-top: 40px;
+    overflow-x: hidden;
     z-index: 2;
 }
-.login-container{
+.login-container{ 
     position: absolute;
     left: 4px;
-    width: 500px;
+    height: 100%;
+    width: 99%;
     display: flex;
     flex-direction: column;
     transition: .5s ease-in-out;
+    background: white;
+    padding: 40px 100px 40px 100px;
+    border-radius: 15px;
+}
+.LogginWith{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.btn-LogginWith{
+    height: 45px;
+    width: 47.5%;
 }
 .register-container{
     position: absolute;
-    right: -520px;
-    width: 500px;
+    right: -700px;
+    height: 100%;
+    width: 99%;
     display: flex;
     flex-direction: column;
     transition: .5s ease-in-out;
+    background: white;
+    padding: 40px 100px 40px 100px;
+    border-radius: 15px;
 }
 .top span{
-    color: #fff;
     font-size: small;
     padding: 10px 0;
     display: flex;
@@ -108,11 +127,9 @@
 }
 .top span a{
     font-weight: 500;
-    color: #fff;
     margin-left: 5px;
 }
 header{
-    color: #fff;
     font-size: 30px;
     text-align: center;
     padding: 10px 0 30px 0;
@@ -122,50 +139,47 @@ header{
     gap: 10px;
 }
 .input-field{
-    font-size: 15px;
-    background: rgba(255, 255, 255, 0.2);
-    color: #fff;
-    height: 50px;
+    font-size: 16px;
+    background: #f5f5f5;
+    height: 60px;
     width: 100%;
-    padding: 0 10px 0 45px;
+    padding: 0 20px 0 55px;
     border: none;
-    border-radius: 30px;
+    border-radius: 10px;
     outline: none;
-    transition: .2s ease;
 }
-.input-field:hover, .input-field:focus{
-    background: rgba(255, 255, 255, 0.25);
+.input-field:focus{
+    border: solid 2px #475993;
 }
 ::-webkit-input-placeholder{
-    color: #fff;
+    color: #000;
 }
 .input-box i{
     position: relative;
     top: -35px;
     left: 17px;
-    color: #fff;
+    color: #000;
 }
 .submit{
     font-size: 15px;
     font-weight: 500;
-    color: black;
     height: 45px;
     width: 100%;
     border: none;
     border-radius: 30px;
     outline: none;
-    background: rgba(255, 255, 255, 0.7);
+    background: black;
     cursor: pointer;
     transition: .3s ease-in-out;
+    color: white;
 }
 .submit:hover{
-    background: rgba(255, 255, 255, 0.5);
+    background: #4f4f4f;
     box-shadow: 1px 5px 7px 1px rgba(0, 0, 0, 0.2);
 }
 .two-col{
     display: flex;
     justify-content: space-between;
-    color: #fff;
     font-size: small;
     margin-top: 10px;
 }
@@ -175,7 +189,6 @@ header{
 }
 .two label a{
     text-decoration: none;
-    color: #fff;
 }
 .two label a:hover{
     text-decoration: underline;
@@ -207,7 +220,6 @@ header{
     }
     .nav-menu-btn i{
         font-size: 25px;
-        color: #fff;
         padding: 10px;
         background: rgba(255, 255, 255, 0.2);
         border-radius: 50%;
